[package]
name = "percent"
version = "0.1.2"
authors = ["David Wildasin <dragonmaus@posteo.net>"]
edition = "2018"
description = "Percent encoding/decoding utilities"
repository = "https://git.dragonma.us/dragonmaus/percent.rs"
license = "BSD-3-Clause-Clear"
categories = ["command-line-utilities"]
publish = false

[dependencies]
getopt = "1"
program = { git = "https://git.dragonma.us/dragonmaus/program.rs", version = "1" }

# NOTE: binary names are temporary until https://github.com/rust-lang/cargo/issues/1706 is resolved
